/**
 * @fileoverview Enterprise-grade test suite for AdminPanel component
 * @module features/admin/components/__tests__/AdminPanel.test
 *
 * Tests cover:
 * - Initial rendering and layout
 * - Tab navigation with session storage persistence
 * - useTransition integration for tab changes
 * - Suspense loading states
 * - Child component rendering
 * - Accessibility compliance
 * - Edge cases
 */

import React, { Suspense } from 'react';
import { render, screen, waitFor, act } from '@testing-library/react';
import userEvent from '@testing-library/user-event';
import { AdminPanel } from '../AdminPanel';

// ============================================================================
// MOCK SETUP
// ============================================================================

// Mock session storage state
let mockSessionStorage: Record<string, string> = {};

// Mock useSessionStorage hook
jest.mock('@/hooks/core', () => ({
  useSessionStorage: <T,>(key: string, initialValue: T): [T, (value: T) => void] => {
    const storedValue = mockSessionStorage[key]
      ? JSON.parse(mockSessionStorage[key])
      : initialValue;
    const setValue = (value: T) => {
      mockSessionStorage[key] = JSON.stringify(value);
    };
    return [storedValue as T, setValue];
  },
}));

// Mock tab config
const mockTabConfig = [
  { id: 'profile', label: 'Profile', icon: 'User' },
  { id: 'hierarchy', label: 'Hierarchy', icon: 'Building' },
  { id: 'security', label: 'Security', icon: 'Shield' },
  { id: 'db', label: 'Database', icon: 'Database' },
  { id: 'data', label: 'Data', icon: 'BarChart' },
  { id: 'logs', label: 'Logs', icon: 'FileText' },
  { id: 'integrations', label: 'Integrations', icon: 'Plug' },
];

jest.mock('@/config/tabs.config', () => ({
  ADMIN_TAB_CONFIG: [
    { id: 'profile', label: 'Profile', icon: 'User' },
    { id: 'hierarchy', label: 'Hierarchy', icon: 'Building' },
    { id: 'security', label: 'Security', icon: 'Shield' },
    { id: 'db', label: 'Database', icon: 'Database' },
    { id: 'data', label: 'Data', icon: 'BarChart' },
    { id: 'logs', label: 'Logs', icon: 'FileText' },
    { id: 'integrations', label: 'Integrations', icon: 'Plug' },
  ],
}));

// Mock cn utility
jest.mock('@/utils/cn', () => ({
  cn: (...classes: (string | boolean | undefined)[]) =>
    classes.filter((c) => typeof c === 'string' && c).join(' '),
}));

// Mock TabbedPageLayout component
jest.mock('@/components/layouts', () => ({
  TabbedPageLayout: ({
    pageTitle,
    pageSubtitle,
    tabConfig,
    activeTabId,
    onTabChange,
    children,
  }: {
    pageTitle: string;
    pageSubtitle: string;
    tabConfig: any[];
    activeTabId: string;
    onTabChange: (id: string) => void;
    children: React.ReactNode;
  }) => (
    <div data-testid="tabbed-page-layout">
      <header>
        <h1 data-testid="page-title">{pageTitle}</h1>
        <p data-testid="page-subtitle">{pageSubtitle}</p>
      </header>
      <nav data-testid="tab-navigation" role="tablist">
        {tabConfig.map((tab: any) => (
          <button
            key={tab.id}
            role="tab"
            data-testid={`tab-${tab.id}`}
            aria-selected={tab.id === activeTabId}
            onClick={() => onTabChange(tab.id)}
          >
            {tab.label}
          </button>
        ))}
      </nav>
      <main data-testid="tab-content">{children}</main>
    </div>
  ),
}));

// Mock LazyLoader component
jest.mock('@/components/ui/molecules/LazyLoader/LazyLoader', () => ({
  LazyLoader: ({ message }: { message: string }) => (
    <div data-testid="lazy-loader" role="progressbar" aria-label={message}>
      {message}
    </div>
  ),
}));

// Mock AdminPanelContent component
jest.mock('../AdminPanelContent', () => ({
  AdminPanelContent: ({ activeTab }: { activeTab: string }) => (
    <div data-testid="admin-panel-content" data-active-tab={activeTab}>
      Content for: {activeTab}
    </div>
  ),
}));

// ============================================================================
// TEST HELPERS
// ============================================================================

const resetMocks = () => {
  mockSessionStorage = {};
};

// ============================================================================
// TEST SUITES
// ============================================================================

describe('AdminPanel Component', () => {
  beforeEach(() => {
    resetMocks();
  });

  // ==========================================================================
  // RENDERING TESTS
  // ==========================================================================

  describe('Rendering', () => {
    it('should render the component', () => {
      render(<AdminPanel />);

      expect(screen.getByTestId('tabbed-page-layout')).toBeInTheDocument();
    });

    it('should render page title', () => {
      render(<AdminPanel />);

      expect(screen.getByTestId('page-title')).toHaveTextContent('Admin Console');
    });

    it('should render page subtitle', () => {
      render(<AdminPanel />);

      expect(screen.getByTestId('page-subtitle')).toHaveTextContent(
        /system settings.*security audits.*data management/i
      );
    });

    it('should render tab navigation', () => {
      render(<AdminPanel />);

      expect(screen.getByTestId('tab-navigation')).toBeInTheDocument();
    });

    it('should render all tabs from config', () => {
      render(<AdminPanel />);

      mockTabConfig.forEach((tab) => {
        expect(screen.getByTestId(`tab-${tab.id}`)).toBeInTheDocument();
      });
    });

    it('should render AdminPanelContent', () => {
      render(<AdminPanel />);

      expect(screen.getByTestId('admin-panel-content')).toBeInTheDocument();
    });
  });

  // ==========================================================================
  // INITIAL TAB TESTS
  // ==========================================================================

  describe('Initial Tab', () => {
    it('should default to profile tab when no initialTab provided', () => {
      render(<AdminPanel />);

      const profileTab = screen.getByTestId('tab-profile');
      expect(profileTab).toHaveAttribute('aria-selected', 'true');
    });

    it('should use initialTab when provided', () => {
      render(<AdminPanel initialTab="security" />);

      const securityTab = screen.getByTestId('tab-security');
      expect(securityTab).toHaveAttribute('aria-selected', 'true');
    });

    it('should pass active tab to AdminPanelContent', () => {
      render(<AdminPanel initialTab="db" />);

      expect(screen.getByTestId('admin-panel-content')).toHaveAttribute(
        'data-active-tab',
        'db'
      );
    });
  });

  // ==========================================================================
  // TAB NAVIGATION TESTS
  // ==========================================================================

  describe('Tab Navigation', () => {
    it('should switch tabs when clicked', async () => {
      const user = userEvent.setup();
      render(<AdminPanel />);

      await user.click(screen.getByTestId('tab-security'));

      expect(screen.getByTestId('tab-security')).toHaveAttribute(
        'aria-selected',
        'true'
      );
    });

    it('should update AdminPanelContent when tab changes', async () => {
      const user = userEvent.setup();
      render(<AdminPanel />);

      await user.click(screen.getByTestId('tab-hierarchy'));

      expect(screen.getByTestId('admin-panel-content')).toHaveAttribute(
        'data-active-tab',
        'hierarchy'
      );
    });

    it('should navigate through all tabs', async () => {
      const user = userEvent.setup();
      render(<AdminPanel />);

      for (const tab of mockTabConfig) {
        await user.click(screen.getByTestId(`tab-${tab.id}`));
        expect(screen.getByTestId(`tab-${tab.id}`)).toHaveAttribute(
          'aria-selected',
          'true'
        );
        expect(screen.getByTestId('admin-panel-content')).toHaveAttribute(
          'data-active-tab',
          tab.id
        );
      }
    });

    it('should deselect previous tab when new tab is selected', async () => {
      const user = userEvent.setup();
      render(<AdminPanel />);

      // Initially profile is selected
      expect(screen.getByTestId('tab-profile')).toHaveAttribute(
        'aria-selected',
        'true'
      );

      // Click security
      await user.click(screen.getByTestId('tab-security'));

      // Profile should be deselected
      expect(screen.getByTestId('tab-profile')).toHaveAttribute(
        'aria-selected',
        'false'
      );
      // Security should be selected
      expect(screen.getByTestId('tab-security')).toHaveAttribute(
        'aria-selected',
        'true'
      );
    });
  });

  // ==========================================================================
  // TRANSITION TESTS
  // ==========================================================================

  describe('Transition Handling', () => {
    it('should apply pending opacity during transition', async () => {
      const user = userEvent.setup();
      render(<AdminPanel />);

      // Note: In actual component, isPending would be true during transition
      // We're testing that the opacity class is properly configured
      const content = screen.getByTestId('admin-panel-content').parentElement;

      // The component should have transition-opacity class configured
      expect(content).toHaveClass('transition-opacity');
    });

    it('should complete transition when tab changes', async () => {
      const user = userEvent.setup();
      render(<AdminPanel />);

      await user.click(screen.getByTestId('tab-logs'));

      await waitFor(() => {
        expect(screen.getByTestId('admin-panel-content')).toHaveAttribute(
          'data-active-tab',
          'logs'
        );
      });
    });
  });

  // ==========================================================================
  // SUSPENSE TESTS
  // ==========================================================================

  describe('Suspense Handling', () => {
    it('should wrap content in Suspense boundary', () => {
      render(<AdminPanel />);

      // Verify the content is rendered (Suspense is working)
      expect(screen.getByTestId('admin-panel-content')).toBeInTheDocument();
    });

    it('should show lazy loader as fallback', () => {
      // This is implicitly tested by the LazyLoader mock
      // The actual Suspense fallback would show during loading
      render(<AdminPanel />);

      // Content should be present after Suspense resolves
      expect(screen.getByTestId('admin-panel-content')).toBeInTheDocument();
    });
  });

  // ==========================================================================
  // SESSION STORAGE TESTS
  // ==========================================================================

  describe('Session Storage Persistence', () => {
    it('should store active tab in session storage', async () => {
      const user = userEvent.setup();
      render(<AdminPanel />);

      await user.click(screen.getByTestId('tab-data'));

      expect(mockSessionStorage['admin_active_tab']).toBe('"data"');
    });

    it('should restore tab from session storage', () => {
      mockSessionStorage['admin_active_tab'] = '"integrations"';

      render(<AdminPanel />);

      expect(screen.getByTestId('tab-integrations')).toHaveAttribute(
        'aria-selected',
        'true'
      );
    });

    it('should use session storage over default when available', () => {
      mockSessionStorage['admin_active_tab'] = '"security"';

      render(<AdminPanel initialTab="hierarchy" />);

      // Session storage should take precedence over initial tab
      expect(screen.getByTestId('tab-security')).toHaveAttribute(
        'aria-selected',
        'true'
      );
    });
  });

  // ==========================================================================
  // ACCESSIBILITY TESTS
  // ==========================================================================

  describe('Accessibility', () => {
    it('should have accessible page heading', () => {
      render(<AdminPanel />);

      const heading = screen.getByRole('heading', { level: 1 });
      expect(heading).toHaveTextContent('Admin Console');
    });

    it('should use tablist role for navigation', () => {
      render(<AdminPanel />);

      expect(screen.getByRole('tablist')).toBeInTheDocument();
    });

    it('should use tab role for each tab button', () => {
      render(<AdminPanel />);

      const tabs = screen.getAllByRole('tab');
      expect(tabs.length).toBe(mockTabConfig.length);
    });

    it('should indicate selected tab with aria-selected', () => {
      render(<AdminPanel />);

      const selectedTab = screen
        .getAllByRole('tab')
        .find((tab) => tab.getAttribute('aria-selected') === 'true');

      expect(selectedTab).toBeInTheDocument();
    });

    it('should have accessible labels for tabs', () => {
      render(<AdminPanel />);

      mockTabConfig.forEach((tab) => {
        const tabElement = screen.getByTestId(`tab-${tab.id}`);
        expect(tabElement).toHaveTextContent(tab.label);
      });
    });

    it('should support keyboard navigation', async () => {
      const user = userEvent.setup();
      render(<AdminPanel />);

      const firstTab = screen.getByTestId('tab-profile');
      firstTab.focus();

      expect(document.activeElement).toBe(firstTab);

      // Tab to next element
      await user.tab();

      // Should move to next tab
      expect(document.activeElement).not.toBe(firstTab);
    });
  });

  // ==========================================================================
  // PROPS TESTS
  // ==========================================================================

  describe('Props', () => {
    it('should accept initialTab prop', () => {
      render(<AdminPanel initialTab="logs" />);

      expect(screen.getByTestId('tab-logs')).toHaveAttribute(
        'aria-selected',
        'true'
      );
    });

    it('should handle undefined initialTab gracefully', () => {
      render(<AdminPanel initialTab={undefined} />);

      // Should fall back to default
      expect(screen.getByTestId('tab-profile')).toHaveAttribute(
        'aria-selected',
        'true'
      );
    });

    it('should handle invalid initialTab gracefully', () => {
      // @ts-ignore - Testing invalid prop
      render(<AdminPanel initialTab="invalid-tab" />);

      // Component should still render
      expect(screen.getByTestId('tabbed-page-layout')).toBeInTheDocument();
    });
  });

  // ==========================================================================
  // EDGE CASES
  // ==========================================================================

  describe('Edge Cases', () => {
    it('should handle rapid tab switching', async () => {
      const user = userEvent.setup();
      render(<AdminPanel />);

      // Rapidly click through tabs
      await user.click(screen.getByTestId('tab-security'));
      await user.click(screen.getByTestId('tab-db'));
      await user.click(screen.getByTestId('tab-data'));
      await user.click(screen.getByTestId('tab-logs'));

      // Should end up on logs
      expect(screen.getByTestId('tab-logs')).toHaveAttribute(
        'aria-selected',
        'true'
      );
    });

    it('should handle clicking same tab multiple times', async () => {
      const user = userEvent.setup();
      render(<AdminPanel />);

      await user.click(screen.getByTestId('tab-security'));
      await user.click(screen.getByTestId('tab-security'));
      await user.click(screen.getByTestId('tab-security'));

      // Should still be on security
      expect(screen.getByTestId('tab-security')).toHaveAttribute(
        'aria-selected',
        'true'
      );
    });

    it('should handle component remount', () => {
      const { unmount, rerender } = render(<AdminPanel />);

      unmount();

      // Remount
      render(<AdminPanel />);

      // Should work normally
      expect(screen.getByTestId('tabbed-page-layout')).toBeInTheDocument();
    });

    it('should maintain tab state across rerenders', async () => {
      const user = userEvent.setup();
      const { rerender } = render(<AdminPanel />);

      await user.click(screen.getByTestId('tab-integrations'));

      expect(screen.getByTestId('tab-integrations')).toHaveAttribute(
        'aria-selected',
        'true'
      );

      // Rerender
      rerender(<AdminPanel />);

      // Tab state should be maintained via session storage
      expect(screen.getByTestId('tab-integrations')).toHaveAttribute(
        'aria-selected',
        'true'
      );
    });
  });

  // ==========================================================================
  // DEFAULT EXPORT TESTS
  // ==========================================================================

  describe('Exports', () => {
    it('should export AdminPanel as named export', () => {
      expect(AdminPanel).toBeDefined();
      expect(typeof AdminPanel).toBe('function');
    });
  });

  // ==========================================================================
  // SNAPSHOT TESTS
  // ==========================================================================

  describe('Snapshots', () => {
    it('should match snapshot for default state', () => {
      const { container } = render(<AdminPanel />);
      expect(container).toMatchSnapshot();
    });

    it('should match snapshot with initialTab', () => {
      const { container } = render(<AdminPanel initialTab="security" />);
      expect(container).toMatchSnapshot();
    });
  });
});
